--- a/src/app/shared/components/molecules/header/header.component.html
+++ b/src/app/shared/components/molecules/header/header.component.html
@@ -1,16 +1,8 @@
 <div class="header">
   <div class="header-information">
-    <app-ee-text class="header-title-black" text="Exchange Your Money" />
-    <app-ee-text
-      class="header-title-green"
-      text="Easily, Quickly And Securely"
-    />
-    <app-ee-text
-      class="header-description"
-      text="Best source for currency conversion, sending money online and tracking
-    exchange rates. Live tracking and notifications + flexible delivery and
-    payment options."
-    />
+    @for (headerText of headerTexts; track headerText.text) {
+    <app-ee-text [class]="headerText.class" [text]="headerText.text" />
+    }
     <app-ee-button
       class="header-button"
       buttonText="Exchange Fund"
