--- a/src/app/shared/components/atoms/ee-button/ee-button.component.html
+++ b/src/app/shared/components/atoms/ee-button/ee-button.component.html
@@ -1,3 +1,3 @@
-<button class="textButton" [type]="dynamicType" [class]="dynamicClass">
+<button class="button" [type]="dynamicType" [class]="dynamicClass">
   {{ buttonText }}
 </button>
